Cleanup: move Proxy properties into a secondary grouping