@@ -93,7 +93,10 @@ public class EC2ResourceModelSourceFactory implements ResourceModelSourceFactory
         return null;
     }
 
-    static Description DESC = DescriptionBuilder.builder()
+    public static final Map<String, Object> PROXY_OPTIONS = Map.of(
+            StringRenderingConstants.GROUP_NAME, "Proxy",
+            StringRenderingConstants.GROUPING, "secondary"
+    );
 
     public static final Map<String, Object> PASSWORD_OPTIONS = Collections.singletonMap(StringRenderingConstants.DISPLAY_TYPE_KEY, StringRenderingConstants.DisplayType.PASSWORD);
 
@@ -173,9 +176,11 @@ public class EC2ResourceModelSourceFactory implements ResourceModelSourceFactory
             .property(PropertyUtil.string(REGION, "Region", "AWS EC2 region.",
                     false,
                     null))
-            .property(PropertyUtil.string(HTTP_PROXY_HOST, "HTTP Proxy Host", "HTTP Proxy Host Name, or blank for default", false, null))
-            .property(PropertyUtil.integer(HTTP_PROXY_PORT, "HTTP Proxy Port", "HTTP Proxy Port, or blank for 80", false, "80"))
-            .property(PropertyUtil.string(HTTP_PROXY_USER, "HTTP Proxy User", "HTTP Proxy User Name, or blank for default", false, null))
+            .property(PropertyUtil.string(HTTP_PROXY_HOST, "HTTP Proxy Host", "HTTP Proxy Host Name, or blank for default", false, null, null,null,
+                    PROXY_OPTIONS
+            ))
+            .property(PropertyUtil.integer(HTTP_PROXY_PORT, "HTTP Proxy Port", "HTTP Proxy Port, or blank for 80", false, "80",null,null,PROXY_OPTIONS))
+            .property(PropertyUtil.string(HTTP_PROXY_USER, "HTTP Proxy User", "HTTP Proxy User Name, or blank for default", false, null,null,null,PROXY_OPTIONS))
             .property(
                     PropertyUtil.string(
                             HTTP_PROXY_PASS,
@@ -185,7 +190,11 @@ public class EC2ResourceModelSourceFactory implements ResourceModelSourceFactory
                             null,
                             null,
                             null,
-                            Collections.singletonMap("displayType", (Object) StringRenderingConstants.DisplayType.PASSWORD)
+                            Map.of(
+                                    StringRenderingConstants.GROUP_NAME, "Proxy",
+                                    StringRenderingConstants.GROUPING, "secondary",
+                                    StringRenderingConstants.DISPLAY_TYPE_KEY, StringRenderingConstants.DisplayType.PASSWORD
+                            )
                     )
             )
             .property(PropertyUtil.string(MAPPING_PARAMS, "Mapping Params",
